# magnav

./: .CMakeLists.txt.swp  .CMakeLists.txt.un~  .clang-format.sh.un~  .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md  clang-format.sh  evaluate_mag.m  evaluate_vector.m  flux_alignment.m  h5data.txt  plot_error.m  untitled.m  untitled2.asv  untitled2.m  untitled3.m
data/: Flt1006_train.h5:Zone.Identifier
expr/detrend/: 新建 文本文档.txt
expr/no-detrend/: 新建 文本文档.txt
src/: .magnav.cpp.swp  .magnav.cpp.un~  ceres_graph_optimizer.cpp  ceres_graph_optimizer.hpp  edge_pose.hpp  magnav.cpp  magnav.cpp~  plot_figure.m  vertex_pose.hpp
src/filter/: .CMakeLists.txt.un~  .butterworth.cpp.un~  .butterworth.hpp.un~  .filter.cpp.un~  .filter.hpp.un~  .filtfilt.cpp.un~  CMakeLists.txt  CMakeLists.txt~  butterworth.cpp  butterworth.hpp  butterworth.hpp~  filter.cpp~  filter.hpp  filter.hpp~
src/mag_compensation/: .CMakeLists.txt.un~  .mag_compensation.cpp.swp  .mag_compensation.cpp.un~  .mag_compensation.hpp.swp  .mag_compensation.hpp.un~  .magcmp.cpp.un~  .magcmp.hpp.un~  .tolles_lawson.cpp.swp  .tolles_lawson.cpp.un~  .tolles_lawson.hpp.swp  .tolles_lawson.hpp.un~  CMakeLists.txt  CMakeLists.txt~  mag_compensation.cpp  mag_compensation.cpp~  mag_compensation.hpp  mag_compensation.hpp~  magcmp.cpp~  magcmp.hpp~  tolles_lawson.cpp  tolles_lawson.cpp~  tolles_lawson.hpp  tolles_lawson.hpp~
src/tools/: .message_print.hpp.un~  .tic_toc.hpp.un~  message_print.hpp  tic_toc.hpp
